# vellum

./: .gitignore  pyproject.toml  readme.md
src/vellum/: main.py
src/vellum/llm/: __init__.py  chat.py
src/vellum/retrieval/: __init__.py  documents.py  embeddings.py  layout.py  qdrant.py
src/vellum/utils/: configuration.py
