[project]
name = "vellum"
version = "0.1.0"
description = "RAG on scientific papers"
readme = "readme.md"
authors = [
    { name = "enwask", email = "enwask@ucf.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "colpali-engine",
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "editables>=0.5",
    "einops>=0.8.1",
    "flash-attn>=2.8.1",
    "hatchling>=1.27.0",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "qdrant-client>=1.14.3",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.2",
]

[project.scripts]
vellum = "vellum:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
colpali-engine = { git = "https://github.com/illuin-tech/colpali.git" }
